# entity-extraction-pipeline-impl

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
dags/: dag_processing_service.py  dag_service.py  entity_matching_service.py
data/: entity_aliases_with_ids.csv
docker_service/: Dockerfile  extractor.py  requirements.txt  run_extractor.py
docker_service/utils/: formatter.py
extracted_entity/: extracted_entities_20250606-023526.json
output/: output.csv
schema/: output_schema.py  schema.py
shared_volume/: input_test.txt
